RESOLVED FIXED147396
[EFL] Fix typos in ewk_extension.cpp
https://bugs.webkit.org/show_bug.cgi?id=147396
Summary [EFL] Fix typos in ewk_extension.cpp
Jincheol Jo
Reported 2015-07-28 20:11:49 PDT
There are some typos in ewk_extension.cpp
Attachments
Patch (2.46 KB, patch)
2015-07-28 20:21 PDT, Jincheol Jo
no flags
Jincheol Jo
Comment 1 2015-07-28 20:21:00 PDT
Gyuyoung Kim
Comment 2 2015-07-28 22:52:22 PDT
Comment on attachment 257728 [details] Patch r=me.
WebKit Commit Bot
Comment 3 2015-07-28 23:42:29 PDT
Comment on attachment 257728 [details] Patch Clearing flags on attachment: 257728 Committed r187540: <http://trac.webkit.org/changeset/187540>
WebKit Commit Bot
Comment 4 2015-07-28 23:42:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.