[EFL] Fix typos in ewk_extension.cpp https://bugs.webkit.org/show_bug.cgi?id=147396

Patch by Jincheol Jo <jincheol.jo@navercorp.com> on 2015-07-28
Reviewed by Gyuyoung Kim.

Fix from toEwkExtendion to toEwkExtension.

* WebProcess/InjectedBundle/API/efl/ewk_extension.cpp:
(toEwkExtension):
(EwkExtension::didCreatePage):
(EwkExtension::willDestroyPage):
(EwkExtension::didReceiveMessage):
(toEwkExtendion): Deleted.

Canonical link: https://commits.webkit.org/165489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187540 268f45cc-cd09-0410-ab3c-d52691b4dbfc